--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-首页
+<head>
+    <title>页面跳转</title>
+    <meta http-equiv="refresh" content="0; url=https://poet000.github.io/国男大冒险">
+    <meta charset="utf-8" />
+</head>
 
 <script>
 var _hmt = _hmt || [];
