--- a/国男大冒险/index.html
+++ b/国男大冒险/index.html
@@ -143,20 +143,11 @@
         </div>
         <div class="footer-bottom">
             <a href="https://github.com/fengzi2333/GuoNanSimulator" >Copyright © fengzi2333</a>
-            <a href="../gy/wx-tg.html" >国男大冒险APP</a>
+            <a href="../app/1.0.1.apk" >国男大冒险APP</a>
         </div>
     </div>
 
 </body>
 
-    <!-- 【统计】 -->
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?21493421b87ce516ffb24e9937ef94ff";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-
-
+    
 </html>
