更新 xzb-b-b-b-b-b-b-b-a-b.html

--- a/国男大冒险/xzb-b-b-b-b-b-b-b-a-b.html
+++ b/国男大冒险/xzb-b-b-b-b-b-b-b-a-b.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="text-b">
-                    <div>你悄悄带孩子做了亲子鉴定，发现两个儿子都和你没有血缘关系。<br><br>你找妻子理论，她却把你骂得狗血淋头，恬不知耻的说自己出轨是因为你没用，于是你决定离婚。<br><br>你不再上交工资，并搬出去和父母一起住。这天岳父敲门，说是为他女儿的事来赔礼，你决定：</div>
+                    <div>你悄悄带孩子做了亲子鉴定，发现两个儿子都和你没有血缘关系。<br><br>你找妻子理论，她却把你骂得狗血淋头，还说自己出轨都是因为你没用，于是你决定离婚。<br><br>你不再上交工资，并搬出去和父母一起住。这天岳父敲门，要为他女儿的事来赔礼，你决定：</div>
                 </div>
 
 
