更新 xzb-b-b-b.html

--- a/国男大冒险/xzb-b-b-b.html
+++ b/国男大冒险/xzb-b-b-b.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="text-b">
-                    <div>你跟着队伍打到了饭，吃饭时耳机没电了，便把耳机放到一旁，边吃饭边玩手机。这时你注意到一个女生在偷你耳机，你准备：</div>
+                    <div>你跟着队伍打到了饭，吃饭时耳机没电了，便把耳机放到一旁，边吃饭边玩起手机。这时，你注意到一个女生在偷你耳机，你准备：</div>
                 </div>
 
 
