更新 xzb-b-b-b-b-b-b-b-a.html

--- a/国男大冒险/xzb-b-b-b-b-b-b-b-a.html
+++ b/国男大冒险/xzb-b-b-b-b-b-b-b-a.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="text-b">
-                    <div>你把儿子接回了家。又和老婆响应国家号召生了二胎，并开始准备三胎。<br><br>可是随着二儿子长大，他和大儿子之间的容貌差异越来越大，你看在眼里，决定：</div>
+                    <div>你把儿子接回了家。又和老婆响应国家号召生了二胎，并开始准备三胎。<br><br>可是随着两个儿子长大，他们和你的容貌差异越来越大，你看在眼里，决定：</div>
                 </div>
 
 
