--- a/国男大冒险/index.html
+++ b/国男大冒险/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" property="og:description" content="请关注公众号：嘲讽">
     <meta name="keywords" content="国男大冒险|国男模拟器|国男的一生">
+    <meta name="msvalidate.01" content="65FE20605071FA82F9558FFD2C5A48B5" /><!-- 【必应】 -->
 
     <title>嘲讽-国男大冒险</title>
     <style data-emotion="css" data-s="">
