--- a/index.html
+++ b/index.html
@@ -1,10 +1,97 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-    <title>页面跳转</title>
-    <meta http-equiv="refresh" content="0; url=https://poet000.github.io/国男大冒险">
-    <meta charset="utf-8" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>嘲讽的主页</title>
+        <style>
+                body {
+                    margin: 0;
+                    padding: 0;
+                    font-family: Arial, sans-serif;
+                }
+                .container {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    padding: 10px;
+                }
+                .game-card {
+                    width: calc(25% - 20px); /* 默认情况下，电脑屏幕每行显示四张 */
+                    margin: 10px;
+                    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+                    overflow: hidden;
+                    border-radius: 8px;
+                    position: relative;
+                }
+                .game-card img {
+                    width: 100%;
+                    height: auto;
+                    display: block;
+                    border-radius: 8px;
+                }
+                .game-card .title {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    color: white;
+                    text-align: center;
+                    padding: 5px 0;
+                    border-radius: 0 0 8px 8px;
+                }
+                @media (max-width: 1024px) and (min-width: 768px) {
+                    .game-card {
+                        width: calc(33.33% - 20px); /* 平板电脑屏幕每行显示三张 */
+                    }
+                }
+                @media (max-width: 768px) {
+                    .game-card {
+                        width: calc(50% - 20px); /* 手机屏幕每行显示两张 */
+                    }
+                }
+        </style>
 </head>
+<body>
+        <div class="container">
+                <div class="game-card">
+                        <a href="./国男大冒险经典版/index.html" target="_blank">
+                                <img src="./fl/img/yx-国男大冒险经典版.png" alt="封面">
+                                <div class="title">国男大冒险:经典版</div>
+                        </a>
+                </div>
+                <div class="game-card">
+                        <a href="./国男大冒险婚恋版/index.html" target="_blank">
+                                <img src="./fl/img/yx-国男大冒险婚恋版.png" alt="封面">
+                                <div class="title">国男大冒险:婚恋版</div>
+                        </a>
+                </div>
+                <div class="game-card">
+                        <a href="index.html" target="_blank">
+                                <img src="./fl/img/yx-国男大冒险经典版2.png" alt="封面">
+                                <div class="title">敬请期待</div>
+                        </a>
+                </div>
+                <div class="game-card">
+                        <a href="index.html" target="_blank">
+                                <img src="./fl/img/yx-国男大冒险婚恋版2.png" alt="封面">
+                                <div class="title">敬请期待</div>
+                        </a>
+                </div>
+                <!-- 可以继续添加更多的游戏卡片 -->
+        </div>
 
-<script>
+
+    <script>
+
+        //【艺术油漆】
+      var hm = document.createElement("script");
+      hm.src = "https://yyyp.oss-cn-beijing.aliyuncs.com/CDN/BG/PaintStyleBg/PaintStyleBg.min.js";
+      var s = document.getElementsByTagName("title")[0];
+      s.parentNode.insertBefore(hm, s);
+
+        //【百度统计】
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -12,4 +99,9 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
+
+    </script>
+
+
+</body>
+</html>
