--- a/国男大冒险经典版/index.html
+++ b/国男大冒险经典版/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="footer-bottom">
             <a href="https://github.com/fengzi2333/GuoNanSimulator" >Copyright © fengzi2333</a>
-            <a href="../app/国男大冒险_1.0.1.apk" >国男大冒险APP</a>
+            <a href="../app/国男大冒险_1.0.1.apk" >男性游戏APP</a>
         </div>
     </div>
 
