--- a/国男大冒险经典版/index.html
+++ b/国男大冒险经典版/index.html
@@ -98,7 +98,7 @@
             <div class="views">
 
                 <div class="text-a">
-                    <div>国男大冒险</div>
+                    <div>国男大冒险:经典版</div>
                 </div>
 
                 <div class="text-b">
