--- a/国男大冒险经典版/index.html
+++ b/国男大冒险经典版/index.html
@@ -7,7 +7,7 @@
     <meta name="description" property="og:description" content="请关注公众号：嘲讽">
     <meta name="keywords" content="国男大冒险经典版|国男大冒险|国男模拟器|国男的一生">
 
-    <title>嘲讽-国男大冒险:经典版</title>
+    <title>嘲讽-国男大冒险经典版</title>
     <style data-emotion="css" data-s="">
         :root {
             --swiper-theme-color: #007aff
@@ -98,7 +98,7 @@
             <div class="views">
 
                 <div class="text-a">
-                    <div>国男大冒险:经典版</div>
+                    <div>国男大冒险</div>
                 </div>
 
                 <div class="text-b">
