--- a/国男大冒险经典版/xzb-b-b-b-b-a.html
+++ b/国男大冒险经典版/xzb-b-b-b-b-a.html
@@ -5,9 +5,9 @@
     <link crossorigin="" rel="shortcut icon" type="image/x-icon" href="./img/logo-cf.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" property="og:description" content="请关注公众号：嘲讽">
-    <meta name="keywords" content="国男大冒险|国男模拟器|国男的一生">
+    <meta name="keywords" content="国男大冒险经典版|国男大冒险|国男模拟器|国男的一生">
 
-    <title>嘲讽-国男大冒险</title>
+    <title>嘲讽-国男大冒险经典版</title>
     <style data-emotion="css" data-s="">
         :root {
             --swiper-theme-color: #007aff
