--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
         <div class="container">
                 <div class="game-card">
                         <a href="./国男大冒险经典版/index.html" target="_blank">
-                                <img src="./fl/img/yx-国男大冒险经典版.png" alt="封面">
+                                <img src="./fl/img/yx/国男大冒险经典版.png" alt="封面">
                                 <div class="title">国男大冒险:经典版</div>
                         </a>
                 </div>
                 <div class="game-card">
                         <a href="./国男大冒险婚恋版/index.html" target="_blank">
-                                <img src="./fl/img/yx-国男大冒险婚恋版.png" alt="封面">
+                                <img src="./fl/img/yx/国男大冒险婚恋版.png" alt="封面">
                                 <div class="title">国男大冒险:婚恋版</div>
                         </a>
                 </div>
                 <div class="game-card">
                         <a href="index.html" target="_blank">
-                                <img src="./fl/img/yx-国男大冒险经典版2.png" alt="封面">
+                                <img src="./fl/img/yx/国男大冒险经典版2.png" alt="封面">
                                 <div class="title">敬请期待</div>
                         </a>
                 </div>
                 <div class="game-card">
                         <a href="index.html" target="_blank">
-                                <img src="./fl/img/yx-国男大冒险经典版3.png" alt="封面">
+                                <img src="./fl/img/yx/国男大冒险经典版3.png" alt="封面">
                                 <div class="title">敬请期待</div>
                         </a>
                 </div>
