--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="game-card">
                         <a href="index.html" target="_blank">
-                                <img src="./fl/img/yx/国男大冒险经典版3.png" alt="封面">
+                                <img src="./fl/img/yx/国男大冒险婚恋版2.png" alt="封面">
                                 <div class="title">敬请期待</div>
                         </a>
                 </div>
