--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 </head>
 
+<script>
 //统计
 var _hmt = _hmt || [];
 (function() {
@@ -12,3 +13,4 @@ var _hmt = _hmt || [];
 	var s = document.getElementsByTagName("script")[0];
 	s.parentNode.insertBefore(hm, s);
 })();
+</script>
