--- a/yx/index.html
+++ b/yx/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>嘲讽 - 男性游戏收录</title>
         <style>
-                body {
-                	margin: 0;
-                	padding: 0;
-                	background-image: linear-gradient(rgba(255, 255, 255, 0.09) 25%, rgba(0, 156, 238, 0.3));
-                	font-family: Arial, sans-serif;
-                }
+        body {
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif
+        }
                 
                 .container {
                 	display: flex;
