--- a/yx/index.html
+++ b/yx/index.html
@@ -99,14 +99,14 @@
                         <div class="game-card">
                                 <a href="./国男大冒险经典版/index.html" target="_blank">
                                         <img src="../fl/img/yx/国男大冒险经典版.png" alt="封面">
-                                        <div class="title">国男大冒险:经典版</div>
+                                        <div class="title">国男大冒险经典版</div>
                                 </a>
                         </div>
                         <div class="game-card" onclick="showAlert()">
                                 <!-- 【下面路径改为#，上面夹个onclick="showAlert()】 -->
                                 <a href="#" target="_blank">
                                         <img src="../fl/img/yx/国男大冒险婚恋版.png" alt="封面">
-                                        <div class="title">国男大冒险:婚恋版</div>
+                                        <div class="title">国男大冒险婚恋版</div>
                                 </a>
                         </div>
                         <div class="game-card">
