--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html data-darkreader-mode="filter"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta http-equiv=”refresh” content=”3;url=’index.html’” >
+<meta name="viewport" http-equiv=”refresh” content=”3;url=’index.html’” >
 <title>嘲讽 - 404</title>
 <style type="text/css">
 body{font-family: "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;overflow-x: hidden;margin:0}
