--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <style type="text/css">
 body{font-family: "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;overflow-x: hidden;margin:0}
 html{margin:16px}
-a {color:#ff000000}
+a {color:#f03838}
 h1 {font-size:68px}
 h2 {font-size:22px}
 h3 {font-size:20px}
