--- a/404.html
+++ b/404.html
@@ -1,36 +1,27 @@
 <!--【404】-->
 
 <!DOCTYPE html>
-<html data-darkreader-mode="filter"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta name="viewport" http-equiv=”refresh” content=”3;url=’index.html’” >
+<html data-darkreader-mode="filter">
+<head>
+<meta http-equiv=”refresh” content=”3;url=’index.html’” >
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>嘲讽 - 404</title>
 <style type="text/css">
 body{font-family: "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;overflow-x: hidden;margin:0}
 html{margin:16px}
 a {color:#f03838}
-h1 {font-size:68px}
-h2 {font-size:22px}
+h1 {font-size:88px}
+h2 {font-size:66px}
 h3 {font-size:20px}
 h4 {font-size:18px}
 h5 {font-size:16px}
 p, li{line-height: 1.6;font-size:16px}
-.main{
-	text-align: center;
-	border-radius: 20px;
-	width: 300px;
-	height: 350px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-}
 </style>
 </head>
 <body>
-<div class="main">
+<div>
   <h1>404</h1>
-  <h3>页面不存在 即将返回首页</h3>
+  <h2>页面不存在 即将返回首页</h2>
 </div>
 </body>
 </html>
