--- a/404.html
+++ b/404.html
@@ -15,11 +15,21 @@ h2 {font-size:66px}
 h3 {font-size:20px}
 h4 {font-size:18px}
 h5 {font-size:16px}
-p, li{line-height: 1.6;font-size:16px}
+p, li{line-height: 1.6;font-size:10px}
+.main{
+        text-align: center;
+        border-radius: 20px;
+        width: 300px;
+        height: 350px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+}
 </style>
 </head>
 <body>
-<div>
+<div class="main">
   <h1>404</h1>
   <h2>页面不存在 即将返回首页</h2>
 </div>
