--- a/404.html
+++ b/404.html
@@ -3,7 +3,6 @@
 <!DOCTYPE html>
 <html data-darkreader-mode="filter">
 <head>
-<meta http-equiv=”refresh” content=”3;url=’index.html’” >
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>嘲讽 - 404</title>
 <style type="text/css">
@@ -26,12 +25,14 @@ p, li{line-height: 1.6;font-size:10px}
         top: 50%;
         transform: translate(-50%,-50%);
 }
+
+<%response.setHeader("Refresh","3;url=index.html");%>
 </style>
 </head>
 <body>
 <div class="main">
   <h1>404</h1>
-  <h2>页面不存在 即将返回首页</h2>
+  <h3>页面不存在 即将返回首页</h3>
 </div>
 </body>
 </html>
