--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>嘲讽 - 404</title>
-<style type="text/css/javascript">
+<style type="text/css">
 
 body{font-family: "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;overflow-x: hidden;margin:0}
 html{margin:16px}
@@ -28,9 +28,11 @@ p, li{line-height: 1.6;font-size:16px}
         transform: translate(-50%,-50%);
 }
 
-//3秒后跳转指定页面
-setTimeout(window.location.href='index.html',3);
+</script>
 
+<script type="text/javascript">
+//3秒后跳转指定页面
+setTimeout(window.location.href='http://www.baidu.com',3);
 </script>
 
 </head>
