--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <html data-darkreader-mode="filter">
 <head>
     <title>嘲讽 - 404</title>
-    <meta http-equiv="refresh" content="0; url=./index.html">
+    <meta http-equiv="refresh" content="0; url=/index.html">
     <meta charset="utf-8" />
 
 <style type="text/css">
