--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
 <html data-darkreader-mode="filter">
 <head>
     <title>嘲讽 - 404</title>
-    <meta http-equiv="refresh" content="0; url=/index.html">
+    <meta http-equiv="refresh" content="3; url=/index.html">
     <meta charset="utf-8" />
 
 <style type="text/css">
 body{font-family: "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;overflow-x: hidden;margin:0}
 html{margin:16px}
 a {color:#f03838}
-h1 {font-size:88px}
+h1 {font-size:88px;margin: -18px;}
 h2 {font-size:35px}
 h3 {font-size:20px}
 h4 {font-size:18px}
