--- a/fl/sm/wx-ds.html
+++ b/fl/sm/wx-ds.html
@@ -1,8 +1,9 @@
 <!--【微信公众号】-->
 
 <!DOCTYPE html>
-<html data-darkreader-mode="filter"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html data-darkreader-mode="filter">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1">
 <title>嘲讽 - 公众号</title>
 <style type="text/css">
