超链接文字修改

--- a/yx/国男大冒险经典版/index.html
+++ b/yx/国男大冒险经典版/index.html
@@ -161,7 +161,7 @@
 				linkStr2: '2019年女大学生割喉司机1500元',//链接文字
 				linkSrc2: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元',//链接地址
 				link: [
-					{ str: '深圳大学食堂', src: 'https://www.baidu.com/s?wd=女子持刀连捅司机' },
+					{ str: '2021年女子持刀连捅司机', src: 'https://www.baidu.com/s?wd=女子持刀连捅司机' },
 					{ str: '2019年女大学生割喉司机1500元', src: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元' },
 				],
 				btnList: [{ txt: '如果能重来...', lastId: 13 }]
