--- a/yx/国男大冒险经典版/index.html
+++ b/yx/国男大冒险经典版/index.html
@@ -233,7 +233,7 @@
 				$('#linkDiv').html("");
 				/*$('#linkLabel').html(info.linkStr);
 				$('#linkLabel').attr('onclick','window.open("'+info.linkSrc+'")');*/
-				$('#linkDiv').append('<div>关键词：<a onclick="window.open(\'' + info.linkStr + '\')" style="color:#0000ff;cursor:pointer;" target="_blank">' + info.linkStr + '</a></div>');
+				$('#linkDiv').append('<div>关键词：<a onclick="window.open(\'' + info.linkSrc + '\')" style="color:#0000ff;cursor:pointer;" target="_blank">' + info.linkStr + '</a></div>');
 				$('#linkDiv').css('display', 'block');
 			} else {
 				$('#linkDiv').css('display', 'none');
