--- a/yx/国男大冒险经典版/index.html
+++ b/yx/国男大冒险经典版/index.html
@@ -199,8 +199,8 @@
 			{
 				id: 24,
 				content: '你打开门，没想到岳父带着刀，他趁你不防砍倒了你，又砍倒了你的父母，然后报警自首。<br><br>最后你老婆出具谅解书，减轻了岳父的刑责，并带着你的家产改嫁了。',
-				linkStr: '2021年女子持刀连捅司机',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=女子持刀连捅司机',//链接地址
+				linkStr: '岳父灭女婿满门 女儿出谅解书',//链接文字
+				linkSrc: 'https://www.baidu.com/s?wd=岳父灭女婿满门',//链接地址
 				btnList: [{ txt: '如果能重来...', lastId: 23 }]
 			},
 			{
@@ -211,7 +211,8 @@
 			{
 				id: 21,
 				content: '你难得有时间休息，迷迷糊糊地拒绝了。<br><br>平时儿子不用接能回来，但今天却迟迟未归。<br><br>你找了一整晚，最终得知儿子被陌生女子骗到楼顶推下来摔死了。',
-
+				linkStr: '男童被陌生女子扔下楼坠亡',//链接文字
+				linkSrc: 'https://www.baidu.com/s?wd=男童被陌生女子扔下楼',//链接地址
 				btnList: [{ txt: '如果能重来...', lastId: 19 }]
 			},
 
