--- a/yx/国男大冒险经典版/index.html
+++ b/yx/国男大冒险经典版/index.html
@@ -210,7 +210,7 @@
 			},
 			{
 				id: 21,
-				content: '你难得有时间休息，迷迷糊糊地拒绝了。<br><br>平时儿子不用接能回来，但今天却迟迟未归。<br><br>你找了一整晚，最终得知儿子被陌生女子骗到楼顶推下来摔死了。',
+				content: '你难得有时间休息，迷迷糊糊地拒绝了。<br><br>平时儿子不用接就能回来，但今天却迟迟未归。<br><br>你找了一整晚，最终得知儿子被陌生女子骗到楼顶推下来摔死了。',
 				linkStr: '男童被陌生女子扔下楼坠亡',//链接文字
 				linkSrc: 'https://www.baidu.com/s?wd=男童被陌生女子扔下楼',//链接地址
 				btnList: [{ txt: '如果能重来...', lastId: 19 }]
