--- a/yx/index.html
+++ b/yx/index.html
@@ -98,15 +98,15 @@
                 <div class="container">
                         <div class="game-card">
                                 <a href="./国男大冒险经典版/index.html" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险经典版.png" alt="封面">
-                                        <div class="title">国男大冒险经典版</div>
+                                        <img src="../fl/img/yx/国男大冒险.png" alt="封面">
+                                        <div class="title">国男大冒险</div>
                                 </a>
                         </div>
                         <div class="game-card" onclick="showAlert()">
-                                <!-- 【下面路径改为#，上面夹个onclick="showAlert()】 -->
+                                <!-- 【下面路径改为#，上面加个onclick="showAlert()】 -->
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险婚恋版.png" alt="封面">
-                                        <div class="title">国男大冒险婚恋版</div>
+                                        <img src="../fl/img/yx/婚恋大冒险.png" alt="封面">
+                                        <div class="title">婚恋大冒险</div>
                                 </a>
                         </div>
                         <div class="game-card">
