--- a/yx/index.html
+++ b/yx/index.html
@@ -97,7 +97,7 @@
         <div class="mainlay">
                 <div class="container">
                         <div class="game-card">
-                                <a href="./国男大冒险经典版/index.html" target="_blank">
+                                <a href="./国男大冒险/index.html" target="_blank">
                                         <img src="../fl/img/yx/国男大冒险.png" alt="封面">
                                         <div class="title">国男大冒险</div>
                                 </a>
