--- a/yx/index.html
+++ b/yx/index.html
@@ -111,13 +111,13 @@
                         </div>
                         <div class="game-card">
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险经典版2.png" alt="封面">
+                                        <img src="../fl/img/yx/国男大冒险2.png" alt="封面">
                                         <div class="title">敬请期待</div>
                                 </a>
                         </div>
                         <div class="game-card">
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险婚恋版2.png" alt="封面">
+                                        <img src="../fl/img/yx/婚恋大冒险2.png" alt="封面">
                                         <div class="title">敬请期待</div>
                                 </a>
                         </div>
