--- a/国男大冒险经典版/index.html
+++ b/国男大冒险经典版/index.html
@@ -1,5 +1,5 @@
 <head>
     <title>页面跳转</title>
-    <meta http-equiv="refresh" content="0; url=../yx/国男大冒险经典版/index.html">
+    <meta http-equiv="refresh" content="0; url=../yx/国男大冒险/index.html">
     <meta charset="utf-8" />
 </head>
