--- a/yx/index.html
+++ b/yx/index.html
@@ -98,26 +98,26 @@
                 <div class="container">
                         <div class="game-card">
                                 <a href="./国男大冒险/index.html" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险.png" alt="封面">
+                                        <img src="./img/国男大冒险.png" alt="封面">
                                         <div class="title">国男大冒险</div>
                                 </a>
                         </div>
                         <div class="game-card" onclick="showAlert()">
                                 <!-- 【下面路径改为#，上面加个onclick="showAlert()】 -->
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/婚恋大冒险.png" alt="封面">
+                                        <img src="./img/婚恋大冒险.png" alt="封面">
                                         <div class="title">婚恋大冒险</div>
                                 </a>
                         </div>
                         <div class="game-card">
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/国男大冒险2.png" alt="封面">
+                                        <img src="./img/国男大冒险2.png" alt="封面">
                                         <div class="title">敬请期待</div>
                                 </a>
                         </div>
                         <div class="game-card">
                                 <a href="#" target="_blank">
-                                        <img src="../fl/img/yx/婚恋大冒险2.png" alt="封面">
+                                        <img src="./img/婚恋大冒险2.png" alt="封面">
                                         <div class="title">敬请期待</div>
                                 </a>
                         </div>
