--- a/yx/国男大冒险/index.html
+++ b/yx/国男大冒险/index.html
@@ -32,9 +32,9 @@
 				<!-- 【页脚】 -->
 				<div class="footer">
 					<div class="footer-top">
-						<a href="/fl/sm/wx-ds.html">打赏</a>
-						<a href="/fl/sm/wx-jq.html">加群</a>
-						<a href="/fl/sm/wx-tg.html">投稿</a>
+						<a href="/sm/wx-ds.html">打赏</a>
+						<a href="/sm/wx-jq.html">进群</a>
+						<a href="/sm/wx-rh.html">入伙</a>
 					</div>
 					<div class="footer-bottom">
 						<a href="https://github.com/fengzi2333/GuoNanSimulator">Copyright © fengzi2333</a>
