--- a/yx/index.html
+++ b/yx/index.html
@@ -143,9 +143,9 @@
         <!-- 【页脚】 -->
         <div class="footer">
                 <div class="footer-top">
-                        <a href="../fl/sm/wx-ds.html">打赏</a>
-                        <a href="../fl/sm/wx-jq.html">加群</a>
-                        <a href="../fl/sm/wx-tg.html">投稿</a>
+                        <a href="../sm/wx-ds.html">打赏</a>
+                        <a href="../sm/wx-jq.html">加群</a>
+                        <a href="../sm/wx-tg.html">投稿</a>
                 </div>
                 <div class="footer-bottom">
                         <a href="../app/国男大冒险_1.0.1.apk">下载男性游戏APP</a>
