--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -37,7 +37,7 @@
 						<a href="/sm/wx-rh.html">入伙</a>
 					</div>
 					<div class="footer-bottom">
-						<a href="https://github.com/fengzi2333/GuoNanSimulator">Copyright © fengzi2333</a>
+						<a href="https://github.com/poet000/poet000.github.io">Copyright © 嘲讽</a>
 					</div>
 				</div>
 			</div>
@@ -64,160 +64,52 @@
 		allJson = [
 			{
 				id: 1,
-				content: "你是某国男性，简称国男，今年20岁，就读于某高校。今天你没有课，你决定：",
-				btnList: [{ txt: '呆在宿舍', lastId: 2 }, { txt: '出去逛逛', lastId: 3 }]
+				content: "你是某国男性，简称国男，和女友相恋已久，就要谈婚论嫁了，你决定：",
+				btnList: [{ txt: '结婚', lastId: 2 }, { txt: '分手', lastId: 3 }]
 			},
 			{
 				id: 2,
-				content: '你打算在宿舍享受一下颓废的生活，于是点了份外卖开始打游戏。<br><br>几轮厮杀后，刚回宿舍的室友问你为什么在食堂对着女生手冲，你感觉有点莫名其妙。<br><br>直到你打开微信，才发现网上到处都是你公然猥亵女生的消息。可你今天根本没出过宿舍。<br><br>几天后，事件源头的女生表示此事纯属虚构，而你早已经社会性死亡。',
-				linkStr: '深圳大学食堂',//链接文字
-				linkSrc: 'https://weibo.com/6239620007/L6iAi5T2l',//链接地址
-				link: [{ str: '深圳大学食堂', src: 'https://weibo.com/6239620007/L6iAi5T2l' }],
-				btnList: [{ txt: '如果能重来...', lastId: 1 }]
-			},
-			{
-				id: 3,
-				content: '出门应该带上哪些东西好呢？你看着手机、平板、kindle、switch... 决定：',
-				btnList: [{ txt: '全部都带上', lastId: 4 }, { txt: '只带上必要的', lastId: 5 }]
+				content: '你和父母去女友家商谈婚事，她家连茶都没给泡，开口就要38.8万彩礼。<br><br>听到这个数字你吓了一跳，不禁抬头望向女友，她却面无表情，一言不发。<br><br>你家表示这个数额实在太高，想再少一些，却被果断拒绝，无奈之下只能回家和亲戚商量。<br><br>回家后你联系了女友，询问是否还有商谈的余地，叛逆了一辈子的她却表示这次要听妈妈的话。<br><br>此时你的家人们正在客厅争得面红耳赤，谁都拿不定主意，作为当事人的你一拍大腿咬牙决定：',
+				btnList: [{ txt: '给彩礼', lastId: 4 }, { txt: '不给彩礼', lastId: 5 }, { txt: '给彩礼并房产证加名', lastId:6 }]
 			},
 			{
 				id: 4,
-				content: '由于你的包太大，不小心碰到了一位学姐的屁股，她在社交网络上称你是色狼，你社会性死亡。',
-				linkStr: '清华老师回应学姐错告学弟',//链接文字
-				linkSrc: 'https://weibo.com/2615417307/JuLwat2bs',//链接地址
-				link: [{ str: '清华老师回应学姐错告学弟', src: 'https://weibo.com/2615417307/JuLwat2bs' }],
-				btnList: [{ txt: '如果能重来...', lastId: 3 }]
-			},
-			{
-				id: 5,
-				content: '你带上手机和蓝牙耳机出门，在学校逛了一圈，看了看时间该吃午饭了。等你来到食堂，这里已经人满患，你选了一个看起来不太长的队伍走了过去：',
-				btnList: [{ txt: '跟紧前人防止被插队', lastId: 6 }, { txt: '和前一个人保持距离', lastId: 7 }]
-			},
-			{
-				id: 6,
-				content: '由于距离前面的女生太近，你被她拍了下来，并在社交网络上造谣你对她图谋不轨。照片迅速传播，你每次出门都被大家指指点点，终于社会性死亡。',
-				linkStr: '大连海事大学女硕士食堂污蔑男生',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=大连海事大学女硕士食堂污蔑男生',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 5 }]
+				content: '你借遍了亲戚，终于凑够彩礼。但这钱毕竟是笔大数额，需要慎重一些。<br><br>你开始纠结彩礼到底是直接给，还是领证后再给呢？经过一番思想斗争，你决定：',
+				btnList: [{ txt: '先给彩礼', lastId: 7 }, { txt: '领证再给', lastId: 8 }]
 			},
 			{
 				id: 7,
-				content: '你和前一个人保持着距离，但是队伍移动得很慢，你打算：',
-				btnList: [{ txt: '玩手机打发时间', lastId: 8 }, { txt: '静静的听歌就好', lastId: 9 }]
+				content: '女友一家拿到钱，直接拉黑了你全部联系方式，既不领证也不还钱。<br><br>你老婆没娶到，还欠了一屁股债...',
+				link: [{ str: '女方悔婚拒退彩礼男子挂横幅寻人', src: 'https://www.baidu.com/s?wd=女方悔婚拒退彩礼男子挂横幅寻人' }],
+				btnList: [{ txt: '如果能重来...', lastId: 2 }]
 			},
 			{
 				id: 8,
-				content: '你忘了跟上前面的队伍，突然听到一个女生喊“你是不是插我队？！”接着一个玻璃瓶就碎在了你的后脑勺，虽然你最后制服了对方，但你也受伤住院。',
-				linkStr: '广东医科大学玻璃瓶',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=广东医科大学玻璃瓶',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 7 }]
-			},
-			{
-				id: 9,
-				content: '你跟着队伍打到了饭，吃饭时耳机没电了，便把耳机放到一旁，边吃饭边玩起手机。这时，你注意到一个女生在偷你耳机，你准备：',
-				btnList: [{ txt: '立即制止她', lastId: 10 }, { txt: '假装没看到', lastId: 11 }]
-			},
-			{
-				id: 10,
-				content: '你将小偷捉了现行，对方却表示：“抛开事实不谈，你坐了我常坐的位子难道就没错吗”，然后砸了你的耳机扬长而去。',
-				linkStr: '华东理工大学耳机',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=华东理工大学耳机',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 9 }]
-			},
-			{
-				id: 11,
-				content: '吃完了饭，你回到宿舍楼，刚吃饱的你不太想运动，但是电梯里已经站了几个女生，你决定：',
-				btnList: [{ txt: '坐电梯', lastId: 12 }, { txt: '走楼梯', lastId: 13 }]
-			},
-			{
-				id: 12,
-				content: '电梯是公共资源，大家都能用，你抱着这个想法走进电梯，却被电梯里的女生认为是抢占她们的资源，并对你网暴。事件发酵后，学校禁止了低楼层的男生使用电梯。',
-				linkStr: '北京师范大学电梯',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=北京师范大学电梯',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 11 }]
-			},
-			{
-				id: 13,
-				content: '你爬楼梯回到宿舍，然后无惊无险的毕业。你找到一份996的工作，贷款买了房和车，并通过相亲结婚。<br><br>婚后一年，你有了个儿子，转眼儿子便到了上小学的年纪，你肩上的担子更重了。<br><br>这天你破天荒的准时下班，你看时间还早，决定：',
-				btnList: [{ txt: '赚点外快', lastId: 14 }, { txt: '回家休息', lastId: 15 }]
-			},
-			{
-				id: 14,
-				content: '你在网约车平台注册了账号，平台推来两份可接订单，你选择：',
-				btnList: [{ txt: '第一份', lastId: 16 }, { txt: '第二份', lastId: 17 }]
-			},
-			{
-				id: 16,
-				content: '你选了第一份订单，叫车的是一位女性，目的地不算远。<br><br>你朝着记忆中的路线开了过去，没想到在快到目的地时，乘客突然跳车，并不治身亡，你被拘留二百天。',
-				linkStr: '货拉拉司机周某春',//链接文字
-				linkSrc: 'https://weibo.com/1806128454/L55Qeu5zh',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 13 }]
-			},
-			{
-				id: 17,
-				content: '叫车的是一位肥硕的女性，手一直插在裤兜里。<br><br>目的地有点远，中间要走很长一段高速。<br><br>行驶途中，她突然从兜里掏出凶器，对着你的脖子连捅数刀。',
-				linkStr: '2021年女子持刀连捅司机',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=女子持刀连捅司机',//链接地址
-				linkStr2: '2019年女大学生割喉司机1500元',//链接文字
-				linkSrc2: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元',//链接地址
+				content: '领完证不到半年，你的老婆无理由要求离婚，还不给退彩礼。你没了老婆还欠一屁股债...',
 				link: [
-					{ str: '2021年女子持刀连捅司机', src: 'https://www.baidu.com/s?wd=女子持刀连捅司机' },
-					{ str: '2019年女大学生割喉司机1500元', src: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元' },
+					{ str: '婚后闪离男方要求归还35万彩礼', src: 'https://www.baidu.com/s?wd=婚后闪离男方要求归还35万彩礼' },
+					{ str: '男子离婚因收入低想要回18万彩礼', src: 'https://www.baidu.com/s?wd=男子离婚因收入低想要回18万彩礼' },
 				],
-				btnList: [{ txt: '如果能重来...', lastId: 13 }]
+				btnList: [{ txt: '如果能重来...', lastId: 2 }]
 			},
 			{
-				id: 15,
-				content: '工作了一天，你十分疲惫，决定回家休息。结果到了小区你发现停车位被陌生车辆占用，你决定：',
-				btnList: [{ txt: '换个车位', lastId: 18 }, { txt: '联系车主', lastId: 19 }]
+				id: 3,
+				content: '正在加班制作后续剧情，24小时候后回来看看吧~',
+				btnList: [{ txt: '敬请期待...', lastId: 2 }]
 			},
 			{
-				id: 18,
-				content: '你找了个没人用的车位，就直接回家，却意外地发现门口放着一双陌生的男鞋。<br><br>怀着好奇与不安的心情，你走进了客厅，眼前的景象让你瞬间崩溃——你的妻子竟然和一个陌生男人在热烈地为彼此的爱意鼓掌庆祝。',
-				btnList: [{ txt: '如果能重来...', lastId: 15 }]
+				id: 5,
+				content: '正在加班制作后续剧情，24小时后再回来看看吧~',
+				btnList: [{ txt: '敬请期待...', lastId: 2 }]
 			},
 			{
-				id: 19,
-				content: '你拨打122联系车主挪车，对方接到通知后立刻下楼，开车离开了。回到家，<br><br>你发现老婆正在洗澡，于是疲惫的你就躺在沙发上小憩。<br><br>在你即将进入梦乡时，老婆的声音从浴室传来，她让你去接儿子回家。你：',
-				btnList: [{ txt: '去接', lastId: 20 }, { txt: '不去', lastId: 21 }]
+				id: 6,
+				content: '正在加班制作后续剧情，24小时后再回来看看吧~',
+				btnList: [{ txt: '敬请期待...', lastId: 2 }]
 			},
-			{
-				id: 20,
-				content: '你把儿子接回了家。又和老婆响应国家号召生了二胎，并开始准备三胎。<br><br>可是随着两个儿子长大，他们和你的容貌差异越来越大，你看在眼里，决定：',
-				btnList: [{ txt: '装作不知道', lastId: 22 }, { txt: '做亲子鉴定', lastId: 23 }]
-			},
-			{
-				id: 22,
-				content: '你对两个儿子的容貌差异视若无睹，视如己出。<br><br>老婆对你很满意，不久，你们又生了第三胎，依然不像你。<br><br>为了供养孩子，你努力工作，奋斗到58岁还没退休，最终在工位上脑溢血猝死，至此断子绝孙。',
-				btnList: [{ txt: '如果能重来...', lastId: 20 }]
-			},
-			{
-				id: 23,
-				content: '你悄悄带孩子做了亲子鉴定，发现两个儿子都和你没有血缘关系。<br><br>你找妻子理论，她却把你骂得狗血淋头，还说自己出轨都是因为你没用，于是你决定离婚。<br><br>你不再上交工资，并搬出去和父母一起住。这天岳父敲门，要为他女儿的事来赔礼，你决定：',
-				btnList: [{ txt: '见面聊聊', lastId: 24 }, { txt: '闭门不见', lastId: 25 }]
-			},
-			{
-				id: 24,
-				content: '你打开门，没想到岳父带着刀，他趁你不防砍倒了你，又砍倒了你的父母，然后报警自首。<br><br>最后你老婆出具谅解书，减轻了岳父的刑责，并带着你的家产改嫁了。',
-				linkStr: '岳父灭女婿满门 女儿出谅解书',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=岳父灭女婿满门',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 23 }]
-			},
-			{
-				id: 25,
-				content: '你表示此事绝无回旋余地，对岳父闭门不见。<br><br>他离开时，你从窗户意外地看到他手持凶器，顿时后怕不已，不禁为刚才的决定感到庆幸。<br><br>你当机立断，迅速和父母一起搬了出去，并卖掉房子远走他乡。自此，你重获新生。。',
-				btnList: [{ txt: '恭喜通关', btnClass: 'successButton', lastId: 1 }]
-			},
-			{
-				id: 21,
-				content: '你难得有时间休息，迷迷糊糊地拒绝了。<br><br>平时儿子不用接就能回来，但今天却迟迟未归。<br><br>你找了一整晚，最终得知儿子被陌生女子骗到楼顶推下来摔死了。',
-				linkStr: '男童被陌生女子扔下楼坠亡',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=男童被陌生女子扔下楼',//链接地址
-				btnList: [{ txt: '如果能重来...', lastId: 19 }]
-			},
-
+			
 		];
-		$("#title").html("国男大冒险");
+		$("#title").html("婚恋大冒险");
 		loadItem(1);
 	});
 	function loadItem(id) {
