--- a/yx/index.html
+++ b/yx/index.html
@@ -102,9 +102,8 @@
                                         <div class="title">国男大冒险</div>
                                 </a>
                         </div>
-                        <div class="game-card" onclick="showAlert()">
-                                <!-- 【下面路径改为#，上面加个onclick="showAlert()】 -->
-                                <a href="#" target="_blank">
+                        <div class="game-card">
+                                <a href="./婚恋大冒险/index.html" target="_blank">
                                         <img src="./img/婚恋大冒险.png" alt="封面">
                                         <div class="title">婚恋大冒险</div>
                                 </a>
@@ -115,7 +114,8 @@
                                         <div class="title">敬请期待</div>
                                 </a>
                         </div>
-                        <div class="game-card">
+                        <div class="game-card" onclick="showAlert()">
+                                <!-- 【下面路径改为#，上面加个onclick="showAlert()】 -->
                                 <a href="#" target="_blank">
                                         <img src="./img/婚恋大冒险2.png" alt="封面">
                                         <div class="title">敬请期待</div>
