--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -37,7 +37,7 @@
 						<a href="/sm/wx-rh.html">入伙</a>
 					</div>
 					<div class="footer-bottom">
-						<a href="https://github.com/poet000/poet000.github.io">Copyright © 嘲讽</a>
+						<a href="https://github.com/poet000/poet000.github.io">Copyright © poet000</a>
 					</div>
 				</div>
 			</div>
