--- a/yx/国男大冒险/index.html
+++ b/yx/国男大冒险/index.html
@@ -70,9 +70,9 @@
 			{
 				id: 2,
 				content: '你打算在宿舍享受一下颓废的生活，于是点了份外卖开始打游戏。<br><br>几轮厮杀后，刚回宿舍的室友问你为什么在食堂对着女生手冲，你感觉有点莫名其妙。<br><br>直到你打开微信，才发现网上到处都是你公然猥亵女生的消息。可你今天根本没出过宿舍。<br><br>几天后，事件源头的女生表示此事纯属虚构，而你早已经社会性死亡。',
-				linkStr: '深圳大学食堂',//链接文字
-				linkSrc: 'https://weibo.com/6239620007/L6iAi5T2l',//链接地址
-				link: [{ str: '深圳大学食堂', src: 'https://weibo.com/6239620007/L6iAi5T2l' }],
+				link: [
+					{ str: '深圳大学食堂', src: 'https://weibo.com/6239620007/L6iAi5T2l' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
 			{
@@ -83,9 +83,9 @@
 			{
 				id: 4,
 				content: '由于你的包太大，不小心碰到了一位学姐的屁股，她在社交网络上称你是色狼，你社会性死亡。',
-				linkStr: '清华老师回应学姐错告学弟',//链接文字
-				linkSrc: 'https://weibo.com/2615417307/JuLwat2bs',//链接地址
-				link: [{ str: '清华老师回应学姐错告学弟', src: 'https://weibo.com/2615417307/JuLwat2bs' }],
+				link: [
+					{ str: '清华老师回应学姐错告学弟', src: 'https://weibo.com/2615417307/JuLwat2bs' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 3 }]
 			},
 			{
@@ -96,8 +96,9 @@
 			{
 				id: 6,
 				content: '由于距离前面的女生太近，你被她拍了下来，并在社交网络上造谣你对她图谋不轨。照片迅速传播，你每次出门都被大家指指点点，终于社会性死亡。',
-				linkStr: '大连海事大学女硕士食堂污蔑男生',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=大连海事大学女硕士食堂污蔑男生',//链接地址
+				link: [
+					{ str: '大连海事大学女硕士食堂污蔑男生', src: 'https://www.baidu.com/s?wd=大连海事大学女硕士食堂污蔑男生' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 5 }]
 			},
 			{
@@ -108,8 +109,9 @@
 			{
 				id: 8,
 				content: '你忘了跟上前面的队伍，突然听到一个女生喊“你是不是插我队？！”接着一个玻璃瓶就碎在了你的后脑勺，虽然你最后制服了对方，但你也受伤住院。',
-				linkStr: '广东医科大学玻璃瓶',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=广东医科大学玻璃瓶',//链接地址
+				link: [
+					{ str: '广东医科大学玻璃瓶', src: 'https://www.baidu.com/s?wd=广东医科大学玻璃瓶' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 7 }]
 			},
 			{
@@ -120,8 +122,9 @@
 			{
 				id: 10,
 				content: '你将小偷捉了现行，对方却表示：“抛开事实不谈，你坐了我常坐的位子难道就没错吗”，然后砸了你的耳机扬长而去。',
-				linkStr: '华东理工大学耳机',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=华东理工大学耳机',//链接地址
+				link: [
+					{ str: '华东理工大学耳机', src: 'https://www.baidu.com/s?wd=华东理工大学耳机' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 9 }]
 			},
 			{
@@ -132,8 +135,9 @@
 			{
 				id: 12,
 				content: '电梯是公共资源，大家都能用，你抱着这个想法走进电梯，却被电梯里的女生认为是抢占她们的资源，并对你网暴。事件发酵后，学校禁止了低楼层的男生使用电梯。',
-				linkStr: '北京师范大学电梯',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=北京师范大学电梯',//链接地址
+				link: [
+					{ str: '北京师范大学电梯', src: 'https://www.baidu.com/s?wd=北京师范大学电梯' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 11 }]
 			},
 			{
@@ -149,17 +153,14 @@
 			{
 				id: 16,
 				content: '你选了第一份订单，叫车的是一位女性，目的地不算远。<br><br>你朝着记忆中的路线开了过去，没想到在快到目的地时，乘客突然跳车，并不治身亡，你被拘留二百天。',
-				linkStr: '货拉拉司机周某春',//链接文字
-				linkSrc: 'https://weibo.com/1806128454/L55Qeu5zh',//链接地址
+				link: [
+					{ str: '货拉拉司机周某春', src: 'https://weibo.com/1806128454/L55Qeu5zh' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 13 }]
 			},
 			{
 				id: 17,
 				content: '叫车的是一位肥硕的女性，手一直插在裤兜里。<br><br>目的地有点远，中间要走很长一段高速。<br><br>行驶途中，她突然从兜里掏出凶器，对着你的脖子连捅数刀。',
-				linkStr: '2021年女子持刀连捅司机',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=女子持刀连捅司机',//链接地址
-				linkStr2: '2019年女大学生割喉司机1500元',//链接文字
-				linkSrc2: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元',//链接地址
 				link: [
 					{ str: '2021年女子持刀连捅司机', src: 'https://www.baidu.com/s?wd=女子持刀连捅司机' },
 					{ str: '2019年女大学生割喉司机1500元', src: 'https://www.baidu.com/s?wd=2019年女大学生割喉司机1500元' },
@@ -199,8 +200,9 @@
 			{
 				id: 24,
 				content: '你打开门，没想到岳父带着刀，他趁你不防砍倒了你，又砍倒了你的父母，然后报警自首。<br><br>最后你老婆出具谅解书，减轻了岳父的刑责，并带着你的家产改嫁了。',
-				linkStr: '岳父灭女婿满门 女儿出谅解书',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=岳父灭女婿满门',//链接地址
+				link: [
+					{ str: '岳父灭女婿满门女儿出谅解书', src: 'https://www.baidu.com/s?wd=岳父灭女婿满门' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 23 }]
 			},
 			{
@@ -211,8 +213,9 @@
 			{
 				id: 21,
 				content: '你难得有时间休息，迷迷糊糊地拒绝了。<br><br>平时儿子不用接就能回来，但今天却迟迟未归。<br><br>你找了一整晚，最终得知儿子被陌生女子骗到楼顶推下来摔死了。',
-				linkStr: '男童被陌生女子扔下楼坠亡',//链接文字
-				linkSrc: 'https://www.baidu.com/s?wd=男童被陌生女子扔下楼',//链接地址
+				link: [
+					{ str: '男童被陌生女子扔下楼', src: 'https://www.baidu.com/s?wd=男童被陌生女子扔下楼' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 19 }]
 			},
 
