--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -79,35 +79,175 @@
 			},
 			{
 				id: 7,
-				content: '女友一家拿到钱，直接拉黑了你全部联系方式，既不领证也不还钱。<br><br>你老婆没娶到，还欠了一屁股债...',
+				content: '女友拿到钱就拉黑了你全部联系方式，既不结婚也不退钱。你老婆没娶到，还欠了一屁股债...',
 				link: [{ str: '女方悔婚拒退彩礼男子挂横幅寻人', src: 'https://www.baidu.com/s?wd=女方悔婚拒退彩礼男子挂横幅寻人' }],
-				btnList: [{ txt: '如果能重来...', lastId: 2 }]
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
 			{
 				id: 8,
-				content: '领完证不到半年，你的老婆无理由要求离婚，还不给退彩礼。你没了老婆还欠一屁股债...',
+				content: '领完证不到半年，你老婆无理由要求离婚，还不给退彩礼。你没了老婆还欠一屁股债...',
 				link: [
 					{ str: '婚后闪离男方要求归还35万彩礼', src: 'https://www.baidu.com/s?wd=婚后闪离男方要求归还35万彩礼' },
 					{ str: '男子离婚因收入低想要回18万彩礼', src: 'https://www.baidu.com/s?wd=男子离婚因收入低想要回18万彩礼' },
 				],
-				btnList: [{ txt: '如果能重来...', lastId: 2 }]
-			},
-			{
-				id: 3,
-				content: '正在加班制作后续剧情，24小时候后回来看看吧~',
-				btnList: [{ txt: '敬请期待...', lastId: 1 }]
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
 			{
 				id: 5,
-				content: '正在加班制作后续剧情，24小时后再回来看看吧~',
-				btnList: [{ txt: '敬请期待...', lastId: 1 }]
+				content: '由于你拒绝给彩礼，女友当天就把你甩了。你恢复单身，不久又找了新女朋友。<br><br>相处一段时间后，新女友突然查出身患白血病，可你们身上都没什么钱。你决定：',
+				btnList: [{ txt: '卖房治病', lastId: 9 }, { txt: '直接跑路', lastId: 10 }]
 			},
 			{
-				id: 6,
-				content: '正在加班制作后续剧情，24小时后再回来看看吧~',
-				btnList: [{ txt: '敬请期待...', lastId: 1 }]
+				id: 9,
+				content: '你砸锅卖铁凑够40万给女友治病，在你悉心的照料下，她不久就痊愈了。<br><br>可一年后，女友却突然弃你而去嫁给别人。你接受不了打击从此一病不起，开始失眠、头昏、腹泻。<br><br>你到处求医，病情却不见好转。你身无分文，向前女友借钱却被拒。走投无路的你最终只能靠拾荒度日。',
+				link: [{ str: '李哨兵40万救治女友后被甩', src: 'https://www.baidu.com/s?wd=李哨兵' }],
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
-			
+			{
+				id: 10,
+				content: '你抛弃重病女友，被街坊邻居唾弃，还因此臭名远扬，再也找不到女朋友，最终社会性死亡。',
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
+			},
+			{
+				id:6,
+				content: '你力排众议，不仅决定给彩礼，还要在婚房的房产证加上女友的名字。<br><br>但房子毕竟价值数百万，家人要你慎重对待。你开始纠结到底是直接加名，还是领证后再加呢？<br><br>经过一番思想斗争，你决定：',
+				btnList: [{ txt: '直接加名', lastId: 11 }, { txt: '领证再加', lastId: 12 }]
+			},
+			{
+				id: 11,
+				content: '房子刚加完名，女友就把你甩了，还分走了半套房，你钱房两失。',
+				link: [
+					{ str: '婚房一半产权赠女友分手索回被驳', src: 'https://www.baidu.com/s?wd=婚房一半产权赠女友分手索回被驳' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 6 }]
+			},
+			{
+				id: 12,
+				content: '你顺利结了婚，开始考虑要孩子的事了，你决定',
+				btnList: [{ txt: '生孩子', lastId: 13 }, { txt: '不生孩子', lastId: 14 }]
+			},
+			{
+				id: 13,
+				content: '你想要孩子，妻子却不想生，直接把孩子给堕了。你起诉离婚，法院却判不准离。<br><br>理由是丈夫不能强迫女性生育，因为男性没有生育权。你郁郁半生，最终断子绝孙。',
+				link: [
+					{ str: '妻子擅自终止妊娠不侵犯丈夫生育权', src: 'https://www.baidu.com/s?wd=妻子擅自终止妊娠是否侵犯丈夫生育权' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 12 }]
+			},
+			{
+				id: 14,
+				content: '你不想要孩子，妻子却想生，于是妻子起诉离婚，法院直接判离。理由是丈夫不得干预女性生育权。<br><br>你不仅丢了老婆，还钱房两失，成了穷光蛋。但经过几年玩命的工作，你又攒够钱娶了媳妇。<br><br>这次你学聪明了，同意要孩子。为了赚钱养家你更加玩命的工作。几年后，孩子长大了，可长得并不像你。你决定：',
+				btnList: [{ txt: '相信妻子', lastId: 15 }, { txt: '偷偷调查', lastId: 16 }, { txt: '先出轨为强', lastId: 17 }]
+			},
+			{
+				id: 15,
+				content: '虽然你选择相信妻子，但不久你们还是因为感情破裂离婚了。<br><br>你婚前全款买的三套房，妻子直接分走两套。但为了孩子，你忍了。<br><br>某晚，你回到曾经的小区想看看孩子，却意外听到传言，开始怀疑孩子不是亲生的。你决定：',
+				link: [
+					{ str: '男子婚前全款买三套房离婚妻子要分六成', src: 'https://www.baidu.com/s?wd=男子婚前全款买三套房离婚妻子要分六成' },
+				],
+				btnList: [{ txt: '认栽继续付抚养费', lastId: 18 }, { txt: '起诉要求亲子鉴定', lastId: 19 }]
+			},
+			{
+				id: 18,
+				content: '你回想前半生，感到委屈又气愤，突发高血压把自己气死了。',
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 19,
+				content: '你想拿回自己的财产，于是起诉要求亲子鉴定，可前妻拒不配合。法院驳回了你的诉讼请求，你还是不服，决定：',
+				link: [
+					{ str: '父亲怀疑非亲生起诉10岁儿子', src: 'https://www.baidu.com/s?wd=父亲怀疑非亲生起诉10岁儿子' },
+				],
+				btnList: [{ txt: '深入调查', lastId: 20 }, { txt: '认栽付抚养费', lastId: 18 }]
+			},
+			{
+				id: 20,
+				content: '你通过其他途径证明了孩子确实不是你的，法院却判出轨的妻子仅需返还抚养费。你决定：',
+				link: [
+					{ str: '结婚两年才知儿子不是亲生', src: 'https://www.baidu.com/s?wd=结婚两年才知儿子不是亲生' },
+					{ str: '男子养娃7月意外发现非亲生', src: 'https://www.baidu.com/s?wd=男子养娃7月意外发现非亲生' },
+					{ str: '男子给女儿上户口发现非亲生', src: 'https://www.baidu.com/s?wd=男子给女儿上户口发现非亲生' },
+					{ str: '男子发现孩子非亲生获赔1万2', src: 'https://www.baidu.com/s?wd=男子发现孩子非亲生获赔1万2' },
+					{ str: '男子发现2岁双胞胎女儿非亲生', src: 'https://www.baidu.com/s?wd=男子发现2岁双胞胎女儿非亲生' },
+					{ str: '男子离婚一年多发现6岁女儿非亲生', src: 'https://www.baidu.com/s?wd=男子离婚一年多发现6岁女儿非亲生' },
+					{ str: '离婚后发现小女儿非亲生男子起诉前妻获赔', src: 'https://www.baidu.com/s?wd=离婚后发现小女儿非亲生男子起诉前妻获赔' },
+				],
+				btnList: [{ txt: '放弃维权', lastId: 21 }, { txt: '抢夺抚养权', lastId: 22 }]
+			},
+			{
+				id: 21,
+				content: '虽然房子被分走两套，钱也没要回来多少，但至少你不用再为这些糟心事心烦了。你最终还是想开了，增寿三年。',
+				btnList: [{ txt: '恭喜通关', btnClass: 'successButton', lastId: 1 }]
+			},
+			{
+				id: 22,
+				content: '带了这么久，你对孩子也有感情了，仍然愿意抚养。但法院判你没资格抚养，最终孩子被生母抢走。',
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 16,
+				content: '经过调查，你掌握了妻子出轨的证据。你决定：',
+				btnList: [{ txt: '起诉离婚', lastId: 23 }, { txt: '索赔精神损失费', lastId: 24 }]
+			},
+			{
+				id: 23,
+				content: '你起诉离婚，但被法院驳回，突发脑溢气死，至此断子绝孙。',
+				link: [
+					{ str: '六旬老人发现儿子非亲生起诉离婚被驳', src: 'https://www.baidu.com/s?wd=六旬老人发现儿子非亲生起诉离婚被驳' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 24,
+				content: '由于妻子和第三者在外长期同居，法院判赔偿1.7万抚养费，还不够你调查费的五分之一，你当庭气死。',
+				link: [
+					{ str: '丈夫起诉第三者索赔精神损失费被驳回', src: 'https://www.baidu.com/s?wd=丈夫起诉第三者索赔精神损失费被驳回' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 17,
+				content: '你出轨被妻子发现，妻子大闹了一场，而你却无法证明妻子也出轨了。于是你：',
+				btnList: [{ txt: '果断离婚', lastId: 25 }, { txt: '道歉 但还出轨', lastId: 26 }]
+			},
+			{
+				id: 25,
+				content: '由于你和情人在外面搞出个私生子，法院判你有错在先，需赔偿妻子18万。',
+				link: [
+					{ str: '男子出轨生娃起诉离婚被判支付18万', src: 'https://www.baidu.com/s?wd=男子出轨生娃起诉离婚被判支付18万' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 26,
+				content: '你出轨又被发现，妻子起诉离婚，法院判离婚，除去抚养费，你还要净身出户、赔妻子精神损失费。',
+				link: [
+					{ str: '丈夫出轨妻子获精神损害赔偿12万', src: 'https://www.baidu.com/s?wd=丈夫出轨妻子获精神损害赔偿12万' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 14 }]
+			},
+			{
+				id: 3,
+				content: '女友平时就情绪无常，一想到要和她过一辈子你就眼前一黑，慎重考虑后还是决定提出分手。<br><br>但毕竟相处这么久，彼此还是很舍不得，分别前你们紧紧相拥，谁知这时女友突然脱掉衣服吻了上来，你决定：',
+				btnList: [{ txt: '接受', lastId: 27 }, { txt: '拒绝', lastId: 28 }]
+			},
+			{
+				id: 27,
+				content: '前女友偷偷怀孕生了孩子，孩子长大后突然来找你要抚养费。你经济困难无法支付，被告上了法庭.<br><br>法院判你支付前11年的抚养费，考虑到你的特殊情况，于是允许分期付款。理由是非婚生子女也要履行抚养义务。',
+				link: [
+					{ str: '独自养儿11年后患病索要抚养费获支持', src: 'https://www.baidu.com/s?wd=独自养儿11年后患病索要抚养费获支持' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
+			},
+			{
+				id: 28,
+				content: '前女友写小作文诬告你强奸，你社会性死亡。',
+				link: [
+					{ str: '罗冠军性侵案', src: 'https://www.baidu.com/s?wd=罗冠军性侵案' },
+				],
+				btnList: [{ txt: '如果能重来...', lastId: 1 }]
+			},
+
 		];
 		$("#title").html("婚恋大冒险");
 		loadItem(1);
