--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -115,7 +115,7 @@
 			},
 			{
 				id: 11,
-				content: '房子刚加完名，女友就把你甩了，还分走了半套房，你钱房两失。',
+				content: '房子刚加完名，女友就把你甩了，还分走了半套房。你钱房两失，欠一屁股债。',
 				link: [
 					{ str: '婚房一半产权赠女友分手索回被驳', src: 'https://www.baidu.com/s?wd=婚房一半产权赠女友分手索回被驳' },
 				],
