--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -243,7 +243,7 @@
 				id: 28,
 				content: '前女友写小作文诬告你强奸，你社会性死亡。',
 				link: [
-					{ str: '罗冠军性侵案', src: 'https://www.baidu.com/s?wd=罗冠军性侵案' },
+					{ str: '罗冠军被诬告性侵案', src: 'https://www.baidu.com/s?wd=罗冠军被诬告性侵案' },
 				],
 				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
