--- a/yx/index.html
+++ b/yx/index.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>嘲讽 - 恐怖游戏收录</title>
+        <title>嘲讽 - 恐怖游戏名录</title>
         <style>
         body {
           margin: 0;
